// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment should match snapshot 1`] = `
<span
  className="payment payment-sm payment-provider-paypal"
/>
`;

exports[`Payment should match snapshot 2`] = `
<span
  className="payment payment-sm payment-provider-paypal payment-lg"
/>
`;

exports[`Payment should match snapshot 3`] = `
<span
  className="payment payment-sm payment-provider-paypal payment-xl"
/>
`;
